# PPOIS

./: README.md
clinic/: CMakeLists.txt
clinic/include/: Ambulance.h  Chamber.h  Client.h  CustomDate.h  Doctor.h  DocumentSignature.h  Employee.h  FullName.h  HealthProfessional.h  IDCard.h  Identity.h  Individual.h  MedicalRecord.h  Medicine.h  Recipe.h
clinic/realisation/: Ambulance.cpp  Chamber.cpp  Client.cpp  CustomDate.cpp  Doctor.cpp  DocumentSignature.cpp  Employee.cpp  FullName.cpp  HealthProfessional.cpp  IDCard.cpp  Identity.cpp  Individual.cpp  MedicalRecord.cpp  Medicine.cpp  Recipe.cpp
clinic/test/: Ambulance_test.cpp  Chamber_test.cpp  Client_test.cpp  CustomDate_test.cpp  Doctor_test.cpp  DocumentSignature_test.cpp  Employee_test.cpp  FullName_test.cpp  HealthProfessional_test.cpp  IDCard_test.cpp  Identity_test.cpp  Individual_test.cpp  MedicalRecord_test.cpp  Medicine_test.cpp  Recipe_test.cpp  main.cpp
kubik_rubik/: Cube.cpp  TestCubeFixture.cpp  cube_test.cpp  interface.cpp  kubik.hpp  main.cpp
kubik_rubika/: kubik.h  test.cpp  КУ
kubik_rubika/kubik_rubika/: kubik.cpp  main.cpp
social_network/: CMakeLists.txt
social_network/src/: main.cpp
social_network/src/headers/: comment.hpp  data.hpp  entity.hpp  mailbox.hpp  message.hpp  post.hpp  server.hpp  user.hpp  user_interface.hpp
social_network/src/source/: comment.cpp  data.cpp  entity.cpp  mailbox.cpp  message.cpp  post.cpp  server.cpp  user.cpp  user_interface.cpp
social_network/src/utils/: utils.cpp  utils.hpp
social_network/tests/: comment_tests.cpp  data_tests.cpp  mailbox_tests.cpp  message_tests.cpp  post_tests.cpp  server_tests.cpp  user_tests.cpp  utils_tests.cpp
